--- a/src/features/Home/components/Main/style.scss
+++ b/src/features/Home/components/Main/style.scss
@@ -1,3 +1,20 @@
-.center-layout{
-    
+.center-layout {
+    h2 {
+        text-align: center;
+    }
+    .grid-container {
+        display: grid;
+        gap: 20px 20px;
+        grid-template-columns: auto auto auto auto;
+        background-color: #ff7506;
+        padding: 10px;
+    }
+
+    .grid-item {
+        background-color: rgba(255, 255, 255, 0.8);
+        border: 1px solid rgba(0, 0, 0, 0.8);
+        padding: 20px;
+        font-size: 22px;
+        text-align: center;
+    }
 }
